[package]
name = "lfu"
version = "0.2.1"
authors = ["Kenan Sulayman <kenan@sig.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wee_alloc = "0.4.5"
wasm-bindgen = "0.2.74"
hashbrown = "0.11.2"

[profile]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
